<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/main">

        <ListPreference
            android:key="choose_language"
            android:title="@string/choose_language"
            android:entries="@array/language"
            android:entryValues="@array/language_types"
            android:summary="@string/russian"
            android:defaultValue="ru"/>


    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/social">

        <Preference
            android:key="rate"
            android:title="@string/rate"/>

        <Preference
            android:key="share"
            android:title="@string/share"/>

        <Preference
            android:key="invite"
            android:title="@string/invite"/>
    </PreferenceCategory>


</PreferenceScreen>